@@ -2,6 +2,7 @@
  - The PGSTD namespace alias is gone.  Use the std namespace directly.
  - pqxx::tuple is now pqxx::row, to avoid clashes with std::tuple.
  - Deprecated escape_binary functions dropped.
+ - Deprecated notify_listener class dropped.
  - Support for many old compilers dropped.
  - Support for "long long" and "long double" types is always enabled.
  - No longer uses obsolete std::tr1 namespace; use plain std instead.
